<resources>
    <string name="app_name">UNIVERSité</string>
    <string name="poste_image">Poste Image</string>
    <string name="delete">Delete</string>
    <string name="time">time</string>
    <string name="name">name</string>
    <string name="questions">questions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_ac__module_details">ac_Module_details</string>
    <string name="tab_text_1">Cours</string>
    <string name="tab_text_2">TD</string>
    <string name="tab_text_3">TP</string>
    <string name="tab_text_4">Examens</string>
    <string name="title_activity_module_elements">module_elements</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_module">activity_module</string>


    <string name="ob_header1">Cours en ligne</string>
    <string name="ob_header2">Partager vos connaissances</string>
    <string name="ob_header3">Réseau social</string>

    <string name="ob_get_started">Rejoins nous</string>

    <string name="ob_desc1">Profitez d\'une base données énorme des cours, TDs, Examens.. Et totalment gratuite.</string>
    <string name="ob_desc2">Partagez vos cours et vos connaissance avec la communauté UNIVERSité.</string>
    <string name="ob_desc3">Rejoignez un réseau social qui rassemble les apprenants et les enseignants.</string>
</resources>