<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                app:cardPreventCornerOverlap="false"
                app:cardCornerRadius="35dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/userQuestions_iv_que_item"
                    android:background="@drawable/ic_baseline_person_24"
                    android:clickable="true"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/poste_image" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:id="@+id/userQuestions_time_que_item_tv"
                android:hint="@string/time"
                android:textStyle="normal"
                android:layout_gravity="end"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@android:color/darker_gray"
                android:id="@+id/userQuestions_name_que_item_tv"
                android:hint="@string/name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:id="@+id/userQuestions_que_item_tv"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:hint="@string/questions" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical|end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:id="@+id/userQuestions_item_que"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:text="@string/delete"
                    android:padding="5dp"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>